# IoT-ESP32-RafaelZiliarski

./: CMakeLists.txt  sdkconfig
includes/: ultrasonic.c
main/: CMakeLists.txt  http_server.c  main.c  oneshot_read_main.c  sensors_app.c  sensors_app.h  sntp_time_sync copy.c  sntp_time_sync.c  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c
main/webpage/: app copy.js  app.css  app.js  index.html
